--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.19.2",
     "graphql-yoga": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "prisma": "^5.17.0",
     "reflect-metadata": "^0.2.2",
     "typegraphql-prisma": "^0.27.2"
