--- a/package.json
+++ b/package.json
@@ -16,26 +16,31 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^5.6.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.11",
+    "@types/express-fileupload": "^1.4.4",
+    "@types/node": "^20.10.2",
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^9.0.8",
+    "express": "^4.18.2",
+    "prisma": "^5.6.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typegraphql-prisma": "^0.27.1",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
-    "@sendgrid/mail": "^8.1.3",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@sendgrid/mail": "^8.1.0",
+    "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "graphql-yoga": "^5.6.1",
+    "dotenv": "^16.3.1",
+    "express-fileupload": "^1.5.0",
+    "graphql-yoga": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
-    "prisma": "^5.17.0",
-    "reflect-metadata": "^0.2.2",
-    "typegraphql-prisma": "^0.27.2"
+    "reflect-metadata": "^0.1.13"
   }
 }
