--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
