--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.8",
     "express": "^4.18.2",
+    "nodemon": "^3.1.5",
     "prisma": "^5.6.0",
     "ts-node": "^10.9.2",
     "typegraphql-prisma": "^0.27.1",
